$Id: ChangeLog,v 1.96 2007-09-27 00:18:16 cmatsuoka Exp $

Stable versions
---------------

2.3.0 ()
	- added runtime endianism detection
	- added extractor for Epic Games' Unreal UMX files
	- added workaround for S3M "Return of Litmus" 0x87 quirk (reported
	  by Ralf Hoffmann)
	- enabled Tracker Packer 3 prowizard loader
	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
	- fixed semantics of big/little endian options, moved to file driver
	- fixed memory corruption in Quadra Composer module loader
	- fixed Quadra Composer vibrato, offset and jump effects
	- fixed endianism problem in KSM and Zen Packer loaders
	- fixed transposition of Digital Tracker module notes
	- fixed build for QNX Neutrino 6.3.2
	- fixed OSS sequencer driver timing (reported by Reynir Stefansson)
	- fixed BMP/Audacious plugin to build also as XMMS plugin
	- fixed Impulse Tracker identification in S3M loader
	- fixed Module Protector test to recognize mods from "Made In Croatia"
	- fixed crash when scanning modules with length zero (bug #1800766)
	- fixed driver detection in NetBSD (don't try to build OSS driver)
	- fixed crash when restart value is invalid (reported by Ralf Hoffmann)
	- fixed handling of S3M pattern 0xfe (reported by Ralf Hoffmann)
	- format management code cleanup
	- prowizard code cleanup

2.2.1 (20070917)
	- added IT tracker fingerprinting
	- enabled track volumes (fixes znm-believe.it, reported by Jon Rafkind)
	- fixed DESTDIR and config file location (by Adam Sampson)
	- fixed volume overdrive in the Megatracker loader
	- fixed probing order of PW-packed and Arc
	- raised sample number limit from 255 to 1024 (fixes megaman.xm
	  tempo and missing instruments reported by Jon Rafkind)
	- build plugin files as PIC

2.2.0 (20070915)
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added TCB Tracker module loader
	- added Digital Tracker DTM module loader